--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -70,3 +70,32 @@
 .dark-theme .card-item {
   color: $white;
 }
+
+.light-theme .sp-box {
+  background: white;
+  border-radius: 1.2rem;
+  padding: 2rem;
+  font-size: 1.4rem;
+
+  .sp-box-header {
+    opacity: 0.4;
+    font-weight: 600;
+    font-size: 1.3rem;
+    display: flex;
+    line-height: 2.2rem;
+  }
+}
+.dark-theme .sp-box {
+  background: #222;
+  border-radius: 1.2rem;
+  padding: 2rem;
+  font-size: 1.4rem;
+
+  .sp-box-header {
+    opacity: 0.4;
+    font-weight: 600;
+    font-size: 1.3rem;
+    display: flex;
+    line-height: 2.2rem;
+  }
+}
